10-12-31 Holger Vogt   
 * breakp.c: allow multiple conditionals with '=' in stop command

10-12-30 Holger Vogt
 * aspice.c, inpcom.c, numparam/general.h, 1-f-code.h, equality.c
   randnumb.c, spdefs.h, cktsens.c: remove compiler warnings
   breakp.c: allow 'time = nnn' in stop command
   
2010-12-28 Holger Vogt
 * xpressn.c, cmath2.c, cmath2.h, randnumb.c, parse.c,
   examples/Monte_Carlo/MonteCarlo.sp:
    add poisson and exponential distribution to nutmeg parser,
    add gauss, aunif, unif, limit to numparam parser
 * spiceif.c: remove bug in experimental_code	
 * control.c: no i/o redirection in define command 
   (so > or < may be used safely)

2010-12-27  Robert Larice
 * tests/bsim3soi/inv_dc.cir ,
 * tests/bsim3soi/inv_tr.cir ,
 * tests/bsim3soi/test1.cir ,
 * tests/bsim3soi/test2.cir ,
 * tests/bsim3soi/test3.cir ,
 * tests/bsim3soi/test4.cir ,
 * tests/bsim3soi/test5.cir ,
 * tests/bsim3soi/test6.cir ,
 * tests/bsim3soi/test7.cir ,
 * tests/bsim3soi/test8.cir :
    include ./thing   --->    include thing
      ngspice currently has a broken include path semantic.
      every pathname with a '/' in it is considered to be `absolute'
	and the include path will not be applied

2010-12-27  Robert Larice
 * src/spicelib/devices/isrc/isrcask.c :
    bug fix, missing isrc trnoise ask function
      breaks tests/vbic/diffamp.cir (infinite recursion of error messages)

2010-12-25 Holger Vogt
 * inpcom.c: exclude control section from fcn inp_chk_for_multi_in_vcvs,
   add ')' as a delimiter in param replacement, fcn inp_sort_params

2010-12-19 Holger Vogt
 * simplify exp variate generation for RTS noise:
   rnorrexp.c removed,
   update to randnumb.c, main.c, /maths/misc/makefile.am, visualc/vngspice.vcproj

2010-12-18 Dietmar Warning
 * devices/bsim*/*ask.c: correct multiplier m for certain currents, conductances, charges
   and capacitances if they are requested by plotting and printing, e.g. @m1[gds]

2010-12-18 Holger Vogt