@@ -928,6 +928,15 @@ if_setparam(CKTcircuit *ckt, char **name, char *param, struct dvec *val, int do_
 	dev = (GENinstance *)NULL;
     }
     doset(ckt, typecode, dev, mod, opt, val);
+
+    /* Call to CKTtemp(ckt) will be invoked here only by 'altermod' commands,
+       to set internal model parameters pParam of each instance for immediate use, 
+       otherwise e.g. model->BSIM3vth0 will be set, 
+       but not pParam of any BSIM3 instance.  
+       May contain side effects because call is abundant.  h_vogt 110101
+    */
+    if (do_model)
+        CKTtemp(ckt);
 }
 
 static struct variable *
